--- a/app/root.scss
+++ b/app/root.scss
@@ -12,8 +12,7 @@
 body {
   font-family: "Roboto", "sans-serif";
   box-sizing: border-box;
-  min-height: 0;
-  min-width: 0;
+  margin: 0;
   overflow-anchor: none;
 }
 
